# httpd-protection-generator

./: .travis.yml  README.md  generate-httpd-protections.hs  httpd-protection-generator.cabal  package.yaml  sample-users.conf  sample-users.yaml  sample.conf  sample.err  sample.yaml  stack.yaml
app2/: Main.hs
src/: GenerateConf.hs
test/: GenerateConfSpec.hs
