name:                httpd-protection-generator
version:             0.1.0.0
synopsis:            Generate httpd protection directives
description:         Generate httpd protection directives
homepage:            https://github.com/TalkBank/httpd-protection-generator
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Configuration
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     GenerateConf
  build-depends:       base >= 4 && <= 5
                     , text
                     , directory
                     , yaml
                     , pipes >= 4.1.7
                     , mtl

executable generate-httpd-protections
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4 && <= 5
                     , httpd-protection-generator
                     , directory
                     , yaml
                     , pipes
                     , mtl

executable show-httpd-protections
  hs-source-dirs:      app2
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4 && <= 5
                     , httpd-protection-generator
                     , directory
                     , yaml
                     , pipes
                     , mtl

test-suite spec
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Spec.hs
  build-depends:       base >= 4 && <= 5
                     , httpd-protection-generator
                     , hspec
                     , QuickCheck
                     , yaml
                     , pipes
                     , mtl

source-repository head
  type:                 git
  location:             https://github.com/TalkBank/httpd-protection-generator
